--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
+URL: https://github.com/khj9759/themeHaejin
+BugReports: https://github.com/khj9759/themeHaejin/issues
